kubernetes/apps/default/blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app blog
  namespace: default
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/instance: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
        app.kubernetes.io/instance: *app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: *app
          image: "harbor.g-eye.io/mgueye01/blog:1.0.4" # {"$imagepolicy": "flux-system:blog"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 200Mi
