kubernetes/apps/default/blog/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app blog
  namespace: default
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    # external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
    # external-dns/is-public: "true"
    ingress.home.arpa/type: "external"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "blog.g-eye.io"
      http:
        paths:
          - backend:
              service:
                name: *app
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
